[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Main/Pages/LemonadeAndStandScene/LemonadeMixingMenu/IngredientSources/SourceBase/SourceItem.gd" type="Script" id=1]
[ext_resource path="res://assets/font/PTMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="SourceItemClass" type="HBoxContainer"]
margin_right = 681.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="."]
margin_right = 224.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[b]Source Label[/b]"
text = "Source Label"
scroll_active = false

[node name="Label3" type="Label" parent="."]
visible = false
margin_right = 224.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Item Source"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceOptions" type="OptionButton" parent="."]
margin_left = 228.0
margin_right = 452.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select One"

[node name="CurrentQuantity" type="Label" parent="."]
margin_left = 456.0
margin_top = 3.0
margin_right = 681.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Currently Have: 0"

[node name="Buffs" type="Label" parent="."]
visible = false
margin_left = 513.0
margin_right = 681.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "+1 / -1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="SourceOptions" to="." method="_on_SourceOptions_item_selected"]
[connection signal="visibility_changed" from="SourceOptions" to="." method="_on_SourceOptions_visibility_changed"]
